# ILeSiA

./: README.md  setup.py
error_recovery/: setup.py  (+1 more)
risk_estimation/: CMakeLists.txt  is_roscore_running.py  package.xml  plot_utils.py  setup.py
risk_estimation/autogen/: index.html
risk_estimation/examples/: generate_saliency_map.py  label_video_manually.py  ood_check.py  play_labelled_video.py  plot_image_with_robot_config.py  simulating_real_experiment.py  test_nonmarkovian_risk_classifier.py  train_markovian_risk_classifier.py  update_gp_toy_example.py  view_dataset_images.py
risk_estimation/models/: risk_estimator.py  safety_layer.py
risk_estimation/models/gaussian_process/: gp_classifier.py
risk_estimation/models/risk_estimation/: benchmark_utils.py  frame_dropping.py  image_corrector.py  result_evaluator.py  risk_classifier.py  risk_dataloader.py  risk_feature_extractor.py  saliency_map_generator.py
risk_estimation/scripts/: extract_results.py  plotter.py
risk_estimation/tests/: run_final_benchmark_with_parameters.py  test_data_aggregation.py  test_examine_trajectory_data.py  test_final_benchmark.py  test_gp_scaling_dim_experiment.py  test_loading_data.py  test_loading_specific_models.py  test_risk_estimator.py  test_simple_features_estimations.py  test_video_save.py
video_embedding/: CMakeLists.txt  __init__.py  package.xml  setup.py  show_video.py  show_video_and_latent_space.py  utils.py
video_embedding/examples/: train_video_embedder.py
video_embedding/models/: elastic_weight_consolidation.py  video_embedder.py
video_embedding/models/nerual_networks/: autoencoder.py
video_embedding/tests/: test_affine_difference.py
(+1 files in other folders)
