<?xml version="1.0"?>
<package format="2">
  <name>risk_estimation</name>
  <version>3.8.0</version>
  <description>The risk_estimation package</description>
  <maintainer email="petr.vanc@cvut.cz">Petr Vanc</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>pynput</depend>

</package>
